Fixed alignment of hero content

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,6 +264,10 @@ p {
 
 .hero-text-container {
   margin-top: 110px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .hero-text {
